--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,14 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.base.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.controls.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.fxml.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.graphics.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.media.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.swing.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.web.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx-swt.jar"
+        "C:\\Users\\mathi\\Documents\\INSA\\IF4\\Extensions\\javafx-sdk-23.0.1\\lib\\javafx.base.jar",
+        "C:\\Users\\mathi\\Documents\\INSA\\IF4\\Extensions\\javafx-sdk-23.0.1\\lib\\javafx.controls.jar",
+        "C:\\Users\\mathi\\Documents\\INSA\\IF4\\Extensions\\javafx-sdk-23.0.1\\lib\\javafx.fxml.jar",
+        "C:\\Users\\mathi\\Documents\\INSA\\IF4\\Extensions\\javafx-sdk-23.0.1\\lib\\javafx.graphics.jar",
+        "C:\\Users\\mathi\\Documents\\INSA\\IF4\\Extensions\\javafx-sdk-23.0.1\\lib\\javafx.media.jar",
+        "C:\\Users\\mathi\\Documents\\INSA\\IF4\\Extensions\\javafx-sdk-23.0.1\\lib\\javafx.swing.jar",
+        "C:\\Users\\mathi\\Documents\\INSA\\IF4\\Extensions\\javafx-sdk-23.0.1\\lib\\javafx.web.jar",
+        "C:\\Users\\mathi\\Documents\\INSA\\IF4\\Extensions\\javafx-sdk-23.0.1\\lib\\javafx-swt.jar"
     ],
     "java.configuration.updateBuildConfiguration": "interactive"
 }
-
