--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,18 @@
 {
     "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.base.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.controls.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.fxml.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.graphics.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.media.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.swing.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx.web.jar",
-        "/Users/morganenaibo/Downloads/javafx-sdk-23.0.1/lib/javafx-swt.jar"
+        "c:\\Program Files\\JavaFX\\javafx-sdk-23.0.1\\lib\\javafx.swing.jar",
+        "c:\\Program Files\\JavaFX\\javafx-sdk-23.0.1\\lib\\javafx-swt.jar",
+        "c:\\Program Files\\JavaFX\\javafx-sdk-23.0.1\\lib\\javafx.graphics.jar",
+        "c:\\Program Files\\JavaFX\\javafx-sdk-23.0.1\\lib\\javafx.media.jar",
+        "c:\\Program Files\\JavaFX\\javafx-sdk-23.0.1\\lib\\javafx.base.jar",
+        "c:\\Program Files\\JavaFX\\javafx-sdk-23.0.1\\lib\\javafx.web.jar",
+        "c:\\Program Files\\JavaFX\\javafx-sdk-23.0.1\\lib\\javafx.controls.jar",
+        "c:\\Program Files\\JavaFX\\javafx-sdk-23.0.1\\lib\\javafx.fxml.jar"
     ],
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "java.project.sourcePaths": [
+        ".",
+        "src"
+    ]
 }
 
