--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
     </repositories>
 
     <build>
+        <resources>
+            <resource>
+                <directory>resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.openjfx</groupId>
